# apohara-dekanus

./: .gitignore  AUDIT.md  Cargo.toml  README.md
.github/workflows/: honesty.yml
crates/airllm-core/: Cargo.toml
crates/airllm-core/src/: config.rs  dispatch.rs  layer_stream.rs  layer_stream_v2.rs  lib.rs  pinned_buffer.rs  qwen3_moe_streaming.rs  qwen3_next_streaming.rs  qwen3_runner.rs  qwen3_streaming.rs  rms_norm_cuda.rs  rope_qknorm.rs
crates/airllm-kernels/: Cargo.toml  build.rs
crates/airllm-kernels/kernels/: add_bf16.cu  add_bf16.cu.ptx  mul_bf16.cu  mul_bf16.cu.ptx  narrow.cu  narrow.cu.ptx  narrow_bf16.cu  narrow_bf16.cu.ptx  reshape.cu  stack.cu
crates/airllm-kernels/src/: ffi.rs  lib.rs
crates/airllm-kernels/tests/: add_bf16_test.rs  mul_bf16_test.rs  t6_5_closure.rs
crates/audit-honesty/: Cargo.toml
crates/audit-honesty/src/: claim.rs  fingerprint.rs  ledger.rs  lib.rs
crates/dekanus-cli/: Cargo.toml
crates/dekanus-cli/src/: main.rs
crates/dekanus-llmlingua2/: Cargo.toml
crates/dekanus-llmlingua2/src/: chunker.rs  classifier.rs  compressor.rs  lib.rs
crates/dekanus-quant-kv/: Cargo.toml
crates/dekanus-quant-kv/src/: dequantize.rs  fwht.rs  kv_cache.rs  lib.rs  quantize.rs
crates/dekanus-rag/: Cargo.toml
crates/dekanus-rag/src/: codec.rs  lib.rs  store.rs
crates/dekanus-romy/: Cargo.toml
crates/dekanus-romy/src/: cache_salt.rs  invariants.rs  lib.rs
crates/dekanus-selective/: Cargo.toml
crates/dekanus-selective/src/: lib.rs  policy.rs  state.rs
forge/plans/: apohara-dekanus-v2.2.md
scripts/: check_honesty.sh
