[workspace]
resolver = "2"
members = [
    "crates/airllm-core",
    "crates/airllm-kernels",
    "crates/dekanus-cli",
    "crates/dekanus-selective",
    "crates/dekanus-quant-kv",
    "crates/dekanus-llmlingua2",
    "crates/dekanus-rag",
    "crates/dekanus-romy",
    "crates/audit-honesty",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/SuarezPM/apohara-dekanus"
authors = ["Pablo <SuarezPM@protonmail.com>"]
keywords = ["llm", "inference", "moe", "layer-streaming", "nanite", "consumer-gpu"]
categories = ["command-line-utilities", "science", "development-tools"]

[workspace.dependencies]
# Math / data
half = { version = "2.4", features = ["bytemuck"] }
bytemuck = { version = "1.18", features = ["derive"] }
memmap2 = "0.9"
ndarray = "0.16"
ndarray-stats = "0.6"

# Errors / serialization
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency / async
tokio = { version = "1.40", features = ["full"] }
# Phase 2: glommio 0.9 (io_uring) re-enabled with vendor patch for liburing C compat
core_affinity = "0.8"
parking_lot = "0.12"

# CUDA / GPU (sm_75 Turing: RTX 2060 SUPER) — re-enabled in Phase 2 after vendor-patch
cudarc = { version = "0.19", features = ["cuda-12050"] }

# ML
# Phase 2: vendor-patch candle-kernels (compatibility.cuh +CUDA_VERSION<13000)
# re-enables cuda + flash-attn for sm_75 (RTX 2060 SUPER) + CUDA 13.3.
candle-core = { version = "0.11", features = ["cuda"] }
candle-nn = "0.11"
candle-transformers = "0.11"
candle-flash-attn = "0.11"
safetensors = "0.4"

# Tokenization
tokenizers = { version = "0.21", features = ["http"] }

# Logging / profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Z3 (verified safety)
z3 = { version = "0.20" }

# Telemetry / evidence (AUDIT.md)
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Vendor patches for T6.5 fix (custom CUDA kernel integration)
# - candle-kernels: CUDA 13.3 compat (compatibility.cuh)
# - candle-core: ATTEMPTED but reverted (m0602) — vendor-patch API mismatches
#   compound, would require 2-4h focused debugging of candle-core 0.11 internals
#   (cudarc_device() patch needed DeviceId::as_index() which doesn't exist;
#   the actual API to get a cudarc Device from CudaDevice is undocumented).
[patch.crates-io]
candle-kernels = { path = "vendor/candle-kernels" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 1

# sm_75 build.rs flags for cudarc-derived crates
[workspace.metadata.cudarc.sm75]
gencode = "arch=compute_75,code=sm_75"
undefine = ["__CUDA_NO_BF16_OPERATORS__"]

# Vendor patch notes for candle-core: T6.5 reversal (m0602) — see [patch.crates-io]
# section above. The vendor/ copy remains for reference but is NOT in the patch
# table; the 5+ iteration API mismatch cost exceeded remaining context.