[package]
name = "airllm-kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Custom CUDA kernels for candle-core 0.11 ops that lack GPU impls (narrow/stack/reshape)"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }

[features]
default = ["cuda"]
cuda = []

[dependencies]
candle-core = { workspace = true }
cudarc = { workspace = true, features = ["cuda-12050"] }
anyhow = { workspace = true }
half = "2"

[build-dependencies]
cudaforge = "0.1.2"
