[package]
name = "dekanus-llmlingua2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LLMLingua2 prompt compression (BERT-base classifier, INT8 on sm_75)"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }