[package]
name = "dekanus-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TurboVec-RAG ANN codec (TurboQuant codec_v8, RAM-optimised, group_size=256)"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
half = { workspace = true }
bytemuck = { workspace = true }
memmap2 = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }