[package]
name = "dekanus-selective"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Selective per-token evaluation policy (ASET port) — the missing primitive"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
half = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }